--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "bootstrap": "^5.1.0",
     "firebase": "^8.6.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
