bug fix for dm destination confirmation, and added close button to item description modal

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "default": "bag-of-stuff"
+    "default": "bag-of-stuff",
+    "demo": "bigbagofstuffdemo"
   },
   "targets": {
     "bag-of-stuff": {
